# diversify-hackatune-2026

./: .gitignore  HANDOVER.md  HOWTO.md  README.md  SCHEMA.md  WHAT_IT_IS.md  docker-compose.yml  pyserver.env
.github/workflows/: ci.yml
backend/: app.py  audio_features.py  cache.py  chat_routes.py  compute_learned_weights.py  cyanite.py  data_loader.py  db_search.py  idf.py  learned_weights.py  llm.py  multimodal_routes.py  rerank.py  result_builder.py  similar_routes.py  smoke_test.py  taste_routes.py  weights_routes.py
docs/: ARCHITECTURE.md  DECISIONS.md  DEPLOY.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  apiDiversify.ts  art.ts
frontend/src/components/: DvTasteCard.tsx  DvTrackRow.tsx  FeatureMap.tsx  ScatterPlot.tsx  TagBadges.tsx  TagExploreModal.tsx  TrackCard.tsx  TrackModal.tsx
frontend/src/pages/: BriefPage.tsx  ChatPage.tsx  DiversifyTastePage.tsx  MoodBoardPage.tsx  SimilarPage.tsx  TastePage.tsx  WeightsPage.tsx
harvester/: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  cyanite_confidence_fetch.py  cyanite_fetch.py  cyanite_segments_fetch.py  docker-compose.yml
harvester/.cargo/: config.toml
harvester/examples/: profile.rs
harvester/scripts/: setup-local-pg.sh
harvester/src/: aubio_extra.rs  compression.rs  cyanite.rs  db.rs  download.rs  features.rs  lib.rs  main.rs  meta.rs
